src/test/deca/context/invalid/our_tests/jb-simple_context3.deca
// Description:
//    test simple de programme contextuellement incorrect
//
// Resultats:
//    Ligne 11: variable a est deja initialisee
// 
// Historique:
//    cree le 12/01/2017

{
   int a = 3.0;
}
